Name:                lambda-bridge
Version:             0.2
Synopsis:            A bridge from Haskell (on a CPU) to VHDL on a FPGA.
Description:         A bridge from Haskell (on a CPU) to VHDL on a FPGA.
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill <andygill@ku.edu>
Maintainer:          Andy Gill <andygill@ku.edu>
Homepage:            http://www.ittc.ku.edu/csdl/fpg/Tools/LambdaBridge
Stability:           Experimental
Category:            Foreign, Hardware, Middleware, Network
Tested-With:         GHC == 6.12.1
Cabal-Version:       >= 1.8
Build-Type:          Simple

extra-source-files:  connect/lb_board_connect.c
		     connect/lb_board_connect.h
		     Makefile
		     README
		     drivers/cat/lb_cat.c
		     drivers/cat/Makefile

Flag example
  Default: True
  Description: build the single example

Library
  Build-Depends:   base >= 4 && < 5, binary, bytestring, random, time, data-default, containers, stm
  Exposed-Modules:     Network.LambdaBridge
                       Network.LambdaBridge.ARQ
                       Network.LambdaBridge.Bridge
                       Network.LambdaBridge.Driver
                       Network.LambdaBridge.Frame
                       Network.LambdaBridge.Multiplex
                       Network.LambdaBridge.Timeout

  Hs-Source-Dirs:      .
  Extensions:          ForeignFunctionInterface
  C-Sources:           connect/lb_board_connect.c
  Include-Dirs:        connect                       

-- Now the drivers.

Executable lb_udp
   Build-Depends: 	base >= 4 && < 5, network >= 2.3, binary, bytestring, random, time, data-default, containers, stm
   Hs-Source-Dirs: 	.  drivers/haskell/udp
   Main-Is: Main.hs

Executable lb_loopback
   Build-Depends: 	base >= 4 && < 5, network >= 2.3, directory
   Hs-Source-Dirs: 	.  drivers/loopback
   Main-Is: Main.hs

Executable lb_rs232
   Build-Depends: 	base >= 4 && < 5, network >= 2.3, binary, bytestring, random, time, data-default, containers, stm, serialport
   Hs-Source-Dirs: 	.  drivers/haskell/rs232
   Main-Is: Main.hs

-- And the runners

Executable udp_lbshell
   Build-Depends: 	base >= 4 && < 5, network >= 2.3, binary, bytestring, random, time, data-default, containers, stm
   Hs-Source-Dirs: 	.  runners/udp_lbshell
   C-Sources:           connect/lb_board_connect.c
   Include-Dirs:        connect
   Main-Is: Main.hs

-- And examples

Executable haskell-cat
   Build-Depends: 	base >= 4 && < 5, random, time, data-default
   Hs-Source-Dirs: 	.  examples/haskell/cat
   C-Sources:           connect/lb_board_connect.c
   Include-Dirs:        connect
   Main-Is: Main.hs

Executable haskell-udp
   Build-Depends: 	base >= 4 && < 5, random, time, data-default
   Hs-Source-Dirs: 	.  examples/haskell/udp
   C-Sources:           connect/lb_board_connect.c
   Include-Dirs:        connect
   Main-Is: Main.hs

-- TO MOVE/RE-MOVE
Executable haskell-test3
   Build-Depends: 	base >= 4 && < 5, binary, bytestring, random, time, data-default, containers, stm
   Hs-Source-Dirs: 	.  examples/haskell-test3
   C-Sources:           connect/lb_board_connect.c
   Include-Dirs:        connect
   Main-Is: Main.hs

Executable haskell-rs232
   Build-Depends: 	base >= 4 && < 5, binary, bytestring, random, time, data-default, containers, stm
   Hs-Source-Dirs: 	. examples/haskell/rs232
   C-Sources:           connect/lb_board_connect.c
   Main-Is: Main.hs
--   GHC-Options: 

-- And the tests

Executable test-frame-bridge
   Build-Depends: 	base >= 4 && < 5, binary, bytestring, random, time, data-default, containers, stm
   Hs-Source-Dirs: 	. tests/frame-bridge
   Main-Is: Main.hs
   GHC-Options: -threaded 

----------------------------------------------------------------

Executable lb_simulator
   Build-Depends: base >= 4 && < 5, binary, bytestring, random, time, data-default, containers, stm, network, directory
   Hs-Source-Dirs: . tools
   Main-Is: Simulator.hs
   GHC-Options: -threaded 

