Name:                lambda-bridge
Version:             0.2.1.0
Synopsis:            A bridge from Haskell (on a CPU) to VHDL on a FPGA.
Description:         A bridge from Haskell (on a CPU) to VHDL on a FPGA.
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill <andygill@ku.edu>
Maintainer:          Andy Gill <andygill@ku.edu>
Homepage:            http://www.ittc.ku.edu/csdl/fpg/Tools/LambdaBridge
Stability:           Experimental
Category:            Foreign, Hardware, Middleware, Network
Tested-With:         GHC == 6.12.1
Cabal-Version:       >= 1.8
Build-Type:          Simple

extra-source-files:  connect/lb_board_connect.c
		     connect/lb_board_connect.h
		     Makefile
		     README
		     drivers/cat/lb_cat.c
		     drivers/cat/Makefile

Flag example
  Default: True
  Description: build the single example

Library
  Build-Depends:   base >= 4 && < 5, network >= 2.3, binary, bytestring, random, time, data-default, containers, stm, directory
  Exposed-Modules:     Network.LambdaBridge
                       Network.LambdaBridge.ARQ
                       Network.LambdaBridge.Bridge
                       Network.LambdaBridge.Driver
                       Network.LambdaBridge.Frame
                       Network.LambdaBridge.Multiplex
                       Network.LambdaBridge.Socket
                       Network.LambdaBridge.Timeout

  Hs-Source-Dirs:      .
  Extensions:          ForeignFunctionInterface
  C-Sources:           connect/lb_board_connect.c
  Include-Dirs:        connect                       

-- Now the drivers.
Executable lb_loopback
   Build-Depends: 	base >= 4 && < 5, network >= 2.3, binary, bytestring, random, time, data-default, containers, stm, directory
   Hs-Source-Dirs: 	.  drivers/loopback
   Main-Is: Main.hs

Executable lb_byte
   Build-Depends: 	base >= 4 && < 5, network >= 2.3, binary, bytestring, random, time, data-default, containers, stm, directory
   Hs-Source-Dirs: 	.  drivers/byte
   Main-Is: Main.hs

-- And the tools
Executable lb_bridge
   Build-Depends: base >= 4 && < 5, binary, bytestring, random, time, data-default, containers, stm, network, directory
   Hs-Source-Dirs: . tools/bridge
   Main-Is: Main.hs
   GHC-Options: -threaded 


