Name:                lambda-bridge
Version:             0.3.1.0
Synopsis:            A bridge from Haskell (on a CPU) to VHDL on a FPGA.
Description:         A bridge from Haskell (on a CPU) to VHDL on a FPGA.
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill <andygill@ku.edu>
Maintainer:          Andy Gill <andygill@ku.edu>
Homepage:            http://www.ittc.ku.edu/csdl/fpg/Tools/LambdaBridge
Stability:           Experimental
Category:            Foreign, Hardware, Middleware, Network
Tested-With:         GHC == 7.6.1
Cabal-Version:       >= 1.8
Build-Type:          Simple

Flag example
  Default: True
  Description: build the single example

Library
  Build-Depends:   base >= 4 && < 5, network >= 2.3, binary, bytestring >= 0.9.1.10, random, time, data-default, containers, stm, directory, crc16, hslogger, unix >= 2.4
  Exposed-Modules:     Network.LambdaBridge
                       Network.LambdaBridge.Bridge
                       Network.LambdaBridge.Frame
                       Network.LambdaBridge.Socket
                       Network.LambdaBridge.Timeout

  Other-modules:
                       Network.LambdaBridge.Logging

  GHC-Options: -threaded 

